<resources>
    <string name="app_name">techno</string>


    <!--    <string name="app_name">view-04</string>-->
    <string name="humidity_string">Humidity</string>
    <string name="nov_14__2018_string">Nov 14, 2018</string>
    <string name="saturday_string">Saturday</string>
    <string name="nov_16__2018_string">Nov 16, 2018</string>
    <string name="since_yesterday_string">since yesterday</string>
    <string name="___13__string">+ 13%</string>
    <string name="friday_string">Friday</string>
    <string name="nov_15__2018_string">Nov 15, 2018</string>
    <string name="thursday_copy_string">Thursday</string>
    <string name="heat_index">Heat Index</string>
    <string name="relative_humidity">Relative humidity</string>
    <string name="temperature">Temperature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">username</string>
    <string name="signup">SignUp</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="remember_me">Remember me</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>

    <!--    <string name="app_name">view-04</string>-->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="location_history_string">Location history</string>
    <string name="settings_string">Settings</string>
    <string name="_2_hours_ago_string">2 hours ago</string>
    <string name="_21_42_string">21.42</string>
    <string name="_1_hour_ago_string">1 hour ago</string>
    <string name="_18_29_string">18.29</string>
    <string name="_48_minutes_ago_string">48 minutes ago</string>
    <string name="_24_53_string">24.53</string>
    <string name="_13_minutes_ago_string">13 minutes ago</string>
    <string name="_38_74_string">38.74</string>
    <string name="november_2018_string">November 2018</string>
    <string name="mon_string">MON</string>
    <string name="tue_string">TUE</string>
    <string name="wed_string">WED</string>
    <string name="thu_string">THU</string>
    <string name="fri_string">FRI</string>
    <string name="sat_string">SAT</string>
    <string name="sun_ek1_string">SUN</string>
    <string name="_5_string">5</string>
    <string name="_6_string">6</string>
    <string name="_7_string">7</string>
    <string name="_8_string">8</string>
    <string name="_9_string">9</string>
    <string name="_10_string">10</string>
    <string name="_11_string">11</string>
    <string name="_38_74_ek1_string">38.74</string>
    <string name="percentage_string">Percentage</string>
    <string name="nov_03__2018_string">Nov 03, 2018</string>
    <string name="visibility_string">Visibility</string>
    <string name="weather_string">Weather</string>
    <string name="nov_03__2018_ek1_string">Nov 03, 2018</string>
    <string name="cracow_poland_string">Cracow Poland</string>
    <string name="visibility_ek1_string">Visibility</string>
    <string name="uv_index_string">UV index</string>
    <string name="pressure_string">Pressure</string>
    <string name="average__28__string">Average: 28%</string>
    <string name="_26_string">26</string>
    <string name="_23_string">23</string>
    <string name="_15_string">15</string>
    <string name="_18_string">18</string>
    <string name="_12_string">12</string>
    <string name="_13_string">13</string>
    <string name="_14_string">14</string>
    <string name="_15_ek1_string">15</string>
    <string name="_16_string">16</string>
    <string name="_17_string">17</string>
    <string name="_18_ek1_string">18</string>
    <string name="_19_string">19</string>
    <string name="_52_minutes_ago_string">52 minutes ago</string>
    <string name="_21_42_ek1_string">21.42</string>
    <string name="_35_minutes_ago_string">35 minutes ago</string>
    <string name="_31_40_string">31.40</string>
    <string name="_9_minutes_ago_string">9 minutes ago</string>
    <string name="_32_58_string">32.58</string>
    <string name="filters_string">Filters</string>
    <string name="last_day_string">Last day</string>
    <string name="_0_string">0</string>
    <string name="_10_ek1_string">10</string>
    <string name="_20_string">20</string>
    <string name="_30_string">30</string>
    <string name="_40_string">40</string>
    <string name="tue_ek1_string">Tue</string>
    <string name="wed_ek1_string">Wed</string>
    <string name="thu_ek1_string">Thu</string>
    <string name="fri_ek1_string">Fri</string>
    <string name="sat_ek1_string">Sat</string>
    <string name="channel_stats_string">Channel Stats</string>
    <string name="_9_minutes_ago_ek1_string">9 minutes ago</string>
    <string name="_32_58_ek1_string">32.58</string>
    <string name="average_stats_string">Average stats</string>
    <string name="accurate_data_string">Accurate data</string>
    <string name="humidity_ek1_string">Humidity</string>
    <string name="weather_ek1_string">Weather</string>
    <string name="_6_ek1_string">6</string>
    <string name="_5_ek1_string">5</string>
    <string name="_4_string">4</string>
    <string name="_3_string">3</string>
    <string name="average_uv_index_string">Average UV index</string>
    <string name="medium_string">Medium</string>
    <string name="home">home</string>
    <string name="reload">Reload</string>
    <string name="user_name">User Name</string>
    <string name="oct_12_2022">oct-12-2022</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
</resources>