<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp">
<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:flow_horizontalBias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_margin="8dp"-->
<!--            app:cardCornerRadius="16dp"-->
<!--            android:elevation="8dp">-->

<!--            <RelativeLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->
<!--                <ImageView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="250dp"-->
<!--                    android:id="@+id/ivImage"-->
<!--                    android:src="@drawable/mobile_login"-->
<!--                    android:scaleType="centerCrop"/>-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/tcHeading"-->
<!--                    android:layout_below="@id/ivImage"-->
<!--                    android:layout_marginStart="8dp"-->
<!--                    android:layout_marginTop="16dp"-->
<!--                    android:text="Baked"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="26sp"-->
<!--                    android:textStyle="bold"/>-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/tvDec"-->
<!--                    android:layout_below="@id/tcHeading"-->
<!--                    android:layout_margin="8dp"-->
<!--                    android:text="@string/lorem"/>-->


<!--            </RelativeLayout>-->
<!--        </androidx.cardview.widget.CardView>-->
<!--    </LinearLayout>-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="90dp"
        android:background="@drawable/rectangle_copy_26_shape">

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:fontFamily="AvertaStd-Semibold"
            android:text="@string/friday_string"
            android:textColor="@color/white"
            android:textSize="21sp" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="59dp"
            android:alpha="0.3955"
            android:fontFamily="AvertaStd-Regular"
            android:text="@string/nov_16__2018_string"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="117dp">

            <ImageView
                android:id="@+id/background_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/path_6" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toStartOf="@id/temp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="85dp"
                android:src="@drawable/thermometer_temperature_svgrepo_com" />
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:fontFamily="AvertaStd-Semibold"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_toStartOf="@id/temp"
                android:layout_marginTop="123dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/drop2" />
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="123dp"
                android:alpha="0.3955"
                android:fontFamily="AvertaStd-Regular"
                android:text="@string/humidity_string"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </RelativeLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>